linear search ->  advanced search : bug fix in collapsing menus (caret persistence after closing menu)

--- a/src/sass/layouts/_collapse-menu.scss
+++ b/src/sass/layouts/_collapse-menu.scss
@@ -23,11 +23,11 @@
     }
 
     .menu-header { // = visible buttons
-
+        display:flex; flex-direction: row;
         height: 70px;
 
         button.btn { 
-            width:100%; height: 100%;
+            width:80%; height: 100%;
             text-align: unset;
             color: $white !important;
             display: flex; align-items: center; justify-content: space-between;
